Learn Set calculation in List